--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline {
   agent {
     docker {
-      image 'gmanohar12/ultimate_ci_cd'
+      image 'abhishekf5/maven-abhishek-docker-agent:v1'
       // mount Docker socket to access the host's Docker daemon
     }
   }
