--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -29,22 +29,37 @@ pipeline {
         }
       }
     }
-    stage('Build and Push Docker Image') {
+    stage('Build Docker Image') {
       environment {
         DOCKER_IMAGE = "gmanohar12/ultimate_ci_cd"
         // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
         REGISTRY_CREDENTIALS = credentials('docker-cred')
-      }
-      steps {
+    }
+    steps {
         script {
-            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build --build-arg BUILDKIT_INLINE_CACHE=1 -t ${DOCKER_IMAGE} .'
-            def dockerImage = docker.image("${DOCKER_IMAGE}")
+            // Navigate to the Dockerfile directory
+            dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
+                // Build the Docker image using BuildKit
+                sh 'docker build --build-arg BUILDKIT_INLINE_CACHE=1 -t $DOCKER_IMAGE .'
+            }
+        }
+    }
+}
+
+  stage('Push Docker Image to Registry') {
+    steps {
+        script {
+            // Define the Docker image reference
+            def dockerImage = docker.image(DOCKER_IMAGE)
+            
+            // Push the Docker image to the Docker registry
             docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
                 dockerImage.push()
             }
         }
-      }
     }
+}
+
     stage('Update Deployment File') {
         environment {
             GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
