--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -40,7 +40,7 @@ pipeline {
             // Navigate to the Dockerfile directory
             dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
                 // Build the Docker image using BuildKit
-                sh 'docker build --build-arg BUILDKIT_INLINE_CACHE=1 -t $DOCKER_IMAGE .'
+                sh 'docker build -t $DOCKER_IMAGE .'
             }
         }
     }
