--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -29,37 +29,22 @@ pipeline {
         }
       }
     }
-    stage('Build Docker Image') {
+     stage('Build and Push Docker Image') {
       environment {
-        DOCKER_IMAGE = "gmanohar12/ultimate_ci_cd"
+        DOCKER_IMAGE = "gmanohar12/ultimate_ci_cd:${BUILD_NUMBER}"
         // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
         REGISTRY_CREDENTIALS = credentials('docker-cred')
-    }
-    steps {
+      }
+      steps {
         script {
-            // Navigate to the Dockerfile directory
-            dir('java-maven-sonar-argocd-helm-k8s/spring-boot-app') {
-                // Build the Docker image using BuildKit
-                sh 'docker build -t $DOCKER_IMAGE .'
-            }
-        }
-    }
-}
-
-  stage('Push Docker Image to Registry') {
-    steps {
-        script {
-            // Define the Docker image reference
-            def dockerImage = docker.image(DOCKER_IMAGE)
-            
-            // Push the Docker image to the Docker registry
+            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
+            def dockerImage = docker.image("${DOCKER_IMAGE}")
             docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
                 dockerImage.push()
             }
         }
+      }
     }
-}
-
     stage('Update Deployment File') {
         environment {
             GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
