--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: gmanohar12/ultimate_ci_cd:replaceImageTag
+        image: gmanohar12/ultimate_ci_cd:3
         ports:
         - containerPort: 8080
